@@ -33,37 +33,41 @@ public class SmsService {
     }
 
     /**
-     * 차량 ID → PS-LTE 번호 기반으로 문자 발송
+     * 차량 ID 기반 문자 발송 (GET / POST 둘 다 여기로 연결됨)
      */
     public void sendToVehicle(Long vehicleId, String text) {
 
-        Vehicle v = vehicleRepository.findById(vehicleId)
+        Vehicle vehicle = vehicleRepository.findById(vehicleId)
                 .orElseThrow(() -> new IllegalArgumentException("차량 없음: ID=" + vehicleId));
 
-        String rawPhone = v.getPsLteNumber();
-        if (rawPhone == null || rawPhone.trim().isEmpty()) {
-            throw new IllegalArgumentException("PS-LTE 번호 없음");
+        // PS-LTE 전화번호
+        String rawPhone = vehicle.getPsLteNumber();
+        if (rawPhone == null || rawPhone.isBlank()) {
+            throw new IllegalArgumentException("차량 PS-LTE 번호가 없습니다.");
         }
 
         // 010-1234-5678 → 01012345678
         String to = rawPhone.replace("-", "").trim();
+
         log.warn("문자 발송 대상 번호 → {}", to);
 
         sendSms(to, text);
     }
 
+
     /**
-     * 단일 번호 문자 발송
+     * 실제 문자 발송 (HMAC 인증 방식)
      */
     public void sendSms(String to, String text) {
 
         String apiKey = props.getApiKey();
         String apiSecret = props.getApiSecret();
+        String from = props.getFrom();
 
-        log.warn("[DEBUG] 문자 발송 시도: to={}, from={}, text={}", to, props.getFrom(), text);
-        log.warn("[DEBUG] API KEY={}, SECRET(길이)={}", apiKey, apiSecret != null ? apiSecret.length() : null);
+        log.warn("[DEBUG] 문자 발송 시도: to={}, from={}, text={}", to, from, text);
+        log.warn("[DEBUG] API KEY={}, SECRET 길이={}", apiKey, apiSecret != null ? apiSecret.length() : null);
 
-        // Body JSON
+        // JSON Body
         String body = """
                 {
                   "message": {
@@ -72,11 +76,12 @@ public class SmsService {
                     "text": "%s"
                   }
                 }
-                """.formatted(to, props.getFrom(), text);
+                """.formatted(to, from, text);
 
         log.warn("[DEBUG] Request Body = {}", body);
 
         try {
+            // Authorization 헤더 생성 (HMAC-SHA256)
             String authHeader = createAuthHeader(apiKey, apiSecret);
             log.warn("[DEBUG] Authorization 헤더 = {}", authHeader);
 
@@ -99,27 +104,27 @@ public class SmsService {
             log.info("SOLAPI 문자 발송 성공 → {}", response);
 
         } catch (Exception e) {
-            log.error("SOLAPI 문자 발송 실패 (예외) → {}", e.getMessage());
+            log.error("SOLAPI 문자 발송 실패 → {}", e.getMessage());
             throw new RuntimeException("SOLAPI 문자 발송 실패", e);
         }
-
     }
 
 
+    /**
+     * HMAC-SHA256 Authorization 헤더 생성
+     */
     private String createAuthHeader(String apiKey, String apiSecret) throws Exception {
-        // 1) 시간 (ISO 8601)
-        String dateTime = Instant.now().toString();
 
-        // 2) 랜덤 salt
-        String salt = UUID.randomUUID().toString().replace("-", "");
+        String dateTime = Instant.now().toString();             // ISO 8601 날짜
+        String salt = UUID.randomUUID().toString().replace("-", ""); // 랜덤 salt
 
-        // 3) signature = HMAC-SHA256(apiSecret, dateTime + salt)
+        // signature = HMAC_SHA256(secret, dateTime + salt)
         Mac mac = Mac.getInstance("HmacSHA256");
         mac.init(new SecretKeySpec(apiSecret.getBytes(StandardCharsets.UTF_8), "HmacSHA256"));
         byte[] hash = mac.doFinal((dateTime + salt).getBytes(StandardCharsets.UTF_8));
         String signature = HexFormat.of().formatHex(hash);
 
-        // 4) Authorization 헤더 문자열 조합
+        // Authorization 헤더 조합
         return "HMAC-SHA256 apiKey=%s, date=%s, salt=%s, signature=%s"
                 .formatted(apiKey, dateTime, salt, signature);
     }
